...
                    android:id="@+id/Sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:onClick="launchSignIn"
                    android:text="Sign in" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
